--- a/css/main.css
+++ b/css/main.css
@@ -6,52 +6,105 @@ html {
 *::before {
   box-sizing: inherit; }
 
-body {
-  background-color: #86A2FF; }
+.buttons span {
+  background-color: #99C0FF;
+  padding: 1em;
+  border-right: 0.5em solid #26487F;
+  border-bottom: 0.5em solid #26487F;
+  border-radius: 2%; }
 
-.output {
-  max-width: 20em;
+#output {
+  max-width: 15em;
   margin-left: auto;
   margin-right: auto;
-  height: 5em;
-  color: #95E881;
-  border: 1px solid #95E881; }
-  .output::after {
+  height: 3em;
+  color: #26487F;
+  background-color: #99C0FF;
+  padding: 1em;
+  border: 1px solid black;
+  text-align: right; }
+  #output::after {
     clear: both;
     content: "";
     display: table; }
 
 .buttons {
-  max-width: 20em;
+  max-width: 15em;
   margin-left: auto;
   margin-right: auto;
-  border: 1px solid #95E881;
-  color: #E8766E; }
+  color: #26487F; }
   .buttons::after {
     clear: both;
     content: "";
     display: table; }
 
-.buttons div {
+.buttons span {
   float: left;
   display: block;
-  margin-right: 2.35765%;
-  width: 18.96686%;
-  border: 1px solid #95E881;
-  height: 1.5em;
+  margin-right: 0%;
+  width: 25%;
+  margin-right: 0;
+  border: 1px solid #26487F;
+  height: 2.75em;
   display: block;
-  padding: 0.25em 1.5em 0.25em 1.5em;
-  margin: .25em;
-  border-top: 1px solid #c0ffff;
-  border-right: 1px solid #00f;
-  border-bottom: 1px solid #00f;
-  border-left: 1px solid #c0ffff; }
-  .buttons div:last-child {
+  padding: 0.75em 1.5em 0.25em 1.5em;
+  border-top: 1px solid #73787F;
+  border-right: 1px solid #26487F;
+  border-bottom: 1px solid #26487F;
+  border-left: 1px solid #73787F; }
+  .buttons span:last-child {
     margin-right: 0; }
 
-.buttons div:hover {
-  border-top: 2px solid #00f;
-  border-right: 2px solid #c0ffff;
-  border-bottom: 2px solid #c0ffff;
-  border-left: 2px solid #00f;
-  background-color: #8688FF; }
+.buttons span:hover {
+  border-top: 1px solid #D3DCEB;
+  border-right: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  border-left: 1px solid #D3DCEB;
+  background-color: #81A1D6; }
+
+.buttons .clear {
+  background-color: #FFF88E; }
+
+.buttons .plus-minus {
+  background-color: #FFF88E; }
+
+.buttons .percentage {
+  background-color: #FFF88E; }
+
+.buttons .divide {
+  background-color: #FFF88E; }
+
+.buttons .times {
+  background-color: #FFF88E; }
+
+.buttons .minus {
+  background-color: #FFF88E; }
+
+.buttons .plus {
+  background-color: #FFF88E; }
+
+.buttons .zero {
+  float: left;
+  display: block;
+  margin-right: 0%;
+  width: 50%;
+  margin-right: 0; }
+  .buttons .zero:last-child {
+    margin-right: 0; }
+
+.buttons .equals {
+  background-color: #FFF88E; }
+
+.buttons .equals:hover,
+.buttons .plus:hover,
+.buttons .minus:hover,
+.buttons .times:hover,
+.buttons .divide:hover,
+.buttons .percentage:hover,
+.buttons .plus-minus:hover,
+.buttons .clear:hover {
+  border-top: 1px solid #D3DCEB;
+  border-right: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  border-left: 1px solid #D3DCEB;
+  background-color: #F2C22F; }
